Handle case where ad-cleanup fails (redo)
The solution didn't work 100%, only reduces the chances of happening significantly. So far, still can happen on hot-reload during development.

- Reverted 15bd26399f0b542a7f370ce47a1a50498f2cfaf9.
- Fix by just hiding the unoccupied aniBox

--- a/ui/scss/component/_ads.scss
+++ b/ui/scss/component/_ads.scss
@@ -66,6 +66,10 @@
       transition: unset !important;
     }
 
+    #aniBox[style*='height: 1px'] {
+      display: none;
+    }
+
     #aniBox,
     #av-container {
       width: 100% !important;
