--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -3,6 +3,13 @@ $metadata-z-index: 1;
 $actions-z-index: 2;
 
 .channelPage-wrapper {
+  .comment__badge {
+    .icon {
+      width: 70%;
+      margin-right: 10%;
+    }
+  }
+
   .button-group {
     .button__content {
       .icon {
@@ -727,6 +734,13 @@ $actions-z-index: 2;
     border-radius: var(--border-radius);
     background: rgba(var(--color-header-background-base), 0.6);
     padding: var(--spacing-m) !important;
+
+    .comment__badge {
+      .icon {
+        margin-bottom: -10%;
+        width: 40%;
+      }
+    }
 
     .claim__menu-button {
       right: calc(var(--spacing-m) - 8px) !important;
