Fix badge alignment on channels page on mobile

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -739,6 +739,9 @@ $actions-z-index: 2;
       .icon {
         margin-bottom: -10%;
         width: 40%;
+        @media (max-width: $breakpoint-small) {
+          margin-bottom: -30%;
+        }
       }
     }
 
