--- a/ui/scss/component/_livestream-chat.scss
+++ b/ui/scss/component/_livestream-chat.scss
@@ -8,7 +8,7 @@ $recent-msg-button__height: 2rem;
   width: 100%;
   background-color: rgba(var(--color-header-background-base), 1);
   border-radius: var(--border-radius);
-  margin-bottom: var(--spacing-m);
+  margin-left: var(--spacing-m);
 
   .credit-amount {
     font-weight: unset;
@@ -25,11 +25,19 @@ $recent-msg-button__height: 2rem;
     }
   }
 
+  @media (min-width: $breakpoint-large) {
+    margin-left: var(--spacing-l);
+  }
+
+  @media (min-width: $breakpoint-small) {
+    top: calc(var(--header-height) + var(--spacing-m)) !important;
+    position: sticky;
+  }
+
   @media (min-width: $breakpoint-medium) {
-    margin: 0;
+    min-width: var(--livestream-comments-width);
     width: var(--livestream-comments-width);
     height: calc(100vh - var(--header-height) - var(--spacing-l));
-    position: absolute;
     right: 0;
     top: 0px;
     bottom: 0;
@@ -77,6 +85,12 @@ $recent-msg-button__height: 2rem;
         }
       }
     }
+  }
+
+  @media (max-width: $breakpoint-medium) {
+    width: 100%;
+    margin: 0;
+    margin-top: var(--spacing-l);
   }
 
   // Mobile
