--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -580,17 +580,22 @@ body {
 
   @media (min-width: 1750px) {
     padding: 0;
+    width: 100%;
+    max-width: var(--page-max-width--filepage);
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr minmax(0, var(--livestream-comments-width));
+    justify-content: space-between;
+    justify-items: end;
+    gap: var(--spacing-m);
+
+    .livestream__chat {
+      margin: 0 !important;
+    }
   }
 
   .card-stack {
     margin-bottom: var(--spacing-m);
-
-    @media (min-width: ($breakpoint-large + 300px)) {
-      max-width: calc(var(--page-max-width--filepage) / 1.25);
-      margin-left: auto;
-      margin-right: auto;
-      width: calc(100% - var(--livestream-comments-width));
-    }
 
     @media (max-width: $breakpoint-medium) {
       max-width: none;
