SettingsRow: add "members only" tag
Not using the membership icons because that has 2 colors for premium and premium+. Keeping it generic and simple.

--- a/ui/scss/component/section.scss
+++ b/ui/scss/component/section.scss
@@ -372,3 +372,13 @@
     border-left: 1px solid var(--color-border);
   }
 }
+
+.settings-row__members-only {
+  color: var(--color-secondary);
+  font-size: var(--font-xxsmall);
+  margin-left: var(--spacing-m);
+  padding: 1px var(--spacing-xxs) 0 var(--spacing-xxs);
+  border: 1px solid var(--color-secondary);
+  border-radius: 5px;
+  vertical-align: middle;
+}
