Vertically center play button

--- a/ui/scss/component/_videojs.scss
+++ b/ui/scss/component/_videojs.scss
@@ -263,6 +263,8 @@ button.vjs-big-play-button {
   .vjs-big-play-button {
     left: calc(50% - 2.5rem) !important;
     margin-left: unset !important;
+    top: calc(50% - 2.5rem) !important;
+    margin-top: unset !important;
   }
 }
 
