Snack: sub-message, close button and duration setting
- Add close button to allow immediate dismissal.

- Add ability to support sub messages. Will be typically used for error codes, etc.

- Add ability to define 'long' auto-dismiss duration (15s) vs. the default of 5s.
    - I didn't add 'off' because there is a comment saying that this scenario should use the Error Modal instead, so respecting that for now.

--- a/ui/scss/component/_snack-bar.scss
+++ b/ui/scss/component/_snack-bar.scss
@@ -5,7 +5,7 @@
   background-color: var(--color-primary);
   color: var(--color-primary-contrast);
   border-radius: var(--border-radius);
-  padding: var(--spacing-s) var(--spacing-l) var(--spacing-s) var(--spacing-m);
+  padding: var(--spacing-s) var(--spacing-m) var(--spacing-s) var(--spacing-m);
   position: fixed;
   transition: all var(--transition-duration) var(--transition-type);
   z-index: 10000; // hack to get it over react modal
@@ -71,8 +71,19 @@
     min-width: 1rem;
   }
 }
+
 .snack-bar__messageText {
   min-width: 0;
   text-overflow: ellipsis;
   overflow: hidden;
+}
+
+.snack-bar__messageText--sub {
+  font-size: var(--font-small);
+  color: var(--color-text-subtitle);
+}
+
+.snack-bar__close {
+  color: var(--color-primary-contrast);
+  margin-left: var(--spacing-m);
 }
