Fix external link icon size in livestream chat

--- a/ui/scss/component/_livestream-comment.scss
+++ b/ui/scss/component/_livestream-comment.scss
@@ -238,5 +238,11 @@
     .channel-name {
       font-size: var(--font-small);
     }
+
+    .button--link {
+      .icon {
+        flex-shrink: 0;
+      }
+    }
   }
 }
