--- a/ui/scss/init/_vars.scss
+++ b/ui/scss/init/_vars.scss
@@ -53,6 +53,7 @@
   --mobile: 600px;
   --side-nav-width: 230px;
   --side-nav-width--micro: 93px;
+  --recommended-content-width: 32rem;
 
   --spacing-main-padding: var(--spacing-xl);
   --floating-viewer-width: 32rem;
