--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -243,7 +243,7 @@
 }
 
 .file-render--scheduledLivestream {
-  background-image: url('//spee.ch/odysee-streaming-png:2.png?quality=80&height=960&width=1920');
+  background-image: url('https://thumbnails.odycdn.com/optimize/s:1280:720/quality:85/plain/https://spee.ch/odysee-streaming-png:2.png');
   background-size: cover;
   margin-top: var(--spacing-m);
 }
