Ability to customize homepage
Ticket: 1145

- Limited to premium for now (early access).
- Needed to handle custom categories from non-English homepages.

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -623,6 +623,11 @@ img {
   }
 }
 
+.homePage-wrapper__section-title {
+  display: flex;
+  justify-content: space-between;
+}
+
 // The following wrapper classes are temporary to fix page specific issues
 .discoverPage-wrapper {
   .claim-preview__wrapper {
