allow user to select preferred currency

--- a/ui/scss/component/_stripe-card.scss
+++ b/ui/scss/component/_stripe-card.scss
@@ -393,3 +393,16 @@ pre {
 .stripe__complete-verification-button {
   margin-right: 10px !important;
 }
+
+// currency selector
+.currency-to-use-div {
+  margin-bottom: 11px;
+}
+
+.currency-to-use-header {
+  margin-bottom: 5px;
+}
+
+.currency-to-use-selector {
+  max-width: 113px;
+}
