Chromecast on Lives
+ remove some dev code that's no longer needed...

--- a/ui/scss/component/_videojs.scss
+++ b/ui/scss/component/_videojs.scss
@@ -329,7 +329,7 @@ button.vjs-big-play-button {
   .vjs-time-divider,
   .vjs-button--theater-mode,
   //.vjs-quality-selector,
-  .vjs-chromecast-button, // hopefully we can use chromecast in the future at some point
+  //.vjs-chromecast-button,
   .vjs-button--autoplay-next
   //,.vjs-progress-control
   {
