Adjust premium splash in homepage customization modal

--- a/ui/scss/component/_splash.scss
+++ b/ui/scss/component/_splash.scss
@@ -317,6 +317,14 @@
 }
 
 .modal {
+  @media (min-width: $breakpoint-xlarge) {
+    .membership-splash {
+      padding-left: 0rem;
+      padding-right: 0rem;
+      margin-left: 0rem;
+      margin-right: 0rem;
+    }
+  }
   @media (min-width: $breakpoint-small) {
     .membership-splash {
       padding-left: unset;
