--- a/ui/scss/component/_snack-bar.scss
+++ b/ui/scss/component/_snack-bar.scss
@@ -79,8 +79,8 @@
 }
 
 .snack-bar__messageText--sub {
-  font-size: var(--font-xsmall);
-  color: var(--color-text-subtitle);
+  font-size: var(--font-small);
+  opacity: 0.8;
 }
 
 .snack-bar__close {
