improve tip support functionality

--- a/ui/scss/all.scss
+++ b/ui/scss/all.scss
@@ -16,6 +16,7 @@
 @import 'component/card';
 @import 'component/channel';
 @import 'component/_textarea-suggestions';
+@import 'component/claim_support_button';
 @import 'component/claim-list';
 @import 'component/collection';
 @import 'component/color-picker';
