--- a/ui/scss/component/_wallet-tip-send.scss
+++ b/ui/scss/component/_wallet-tip-send.scss
@@ -2,3 +2,19 @@
   margin-top: -21px;
   margin-bottom: -21px;
 }
+
+.wallet-send-tip-modal {
+  .card__title {
+    margin-top: -16px;
+    margin-bottom: 16px;
+  }
+
+  .section__subtitle {
+    margin-top: 16px;
+    margin-bottom: -5px;
+  }
+
+  .add-a-card-help-message {
+    font-size: 16px;
+  }
+}
