--- a/ui/scss/component/_stripe-card.scss
+++ b/ui/scss/component/_stripe-card.scss
@@ -395,15 +395,15 @@ pre {
 }
 
 // currency selector
-.currency-to-use-div {
+.currency-to-use__div {
   margin-bottom: 11px;
 }
 
-.currency-to-use-header {
+.currency-to-use__header {
   margin-bottom: 5px;
 }
 
-.currency-to-use-selector {
+.currency-to-use__selector {
   max-width: 113px;
 }
 
