--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -175,6 +175,7 @@
             text-overflow: ellipsis;
             white-space: nowrap;
             overflow: hidden;
+            display: unset;
 
             &:hover {
               color: var(--color-secondary);
