--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -379,6 +379,7 @@ $thumbnailWidthSmall: 2rem;
   padding-bottom: var(--spacing-xs);
   font-size: var(--font-small);
   border-bottom: 1px solid var(--color-border);
+  color: var(--color-text);
 
   &:not(:first-child) {
     margin-top: var(--spacing-xs);
