--- a/ui/scss/component/_notification.scss
+++ b/ui/scss/component/_notification.scss
@@ -318,7 +318,7 @@ $contentMaxWidth: 60rem;
 }
 
 .notification__bubble--small {
-  font-size: var(--font-xsmall);
+  font-size: var(--font-xxsmall);
 }
 
 .notification__bubble--inline {
