--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -69,6 +69,9 @@ $actions-z-index: 2;
         margin-top: 3px;
       }
     }
+    .claim__menu-button {
+      right: -8px;
+    }
   }
 
   .mb-xl {
