--- a/ui/scss/component/_claim-search.scss
+++ b/ui/scss/component/_claim-search.scss
@@ -56,7 +56,7 @@
 
     &:not(:first-of-type) {
       margin-top: 0;
-      padding-left: var(--spacing-m);
+      // padding-left: var(--spacing-m);
     }
   }
 }
