--- a/ui/scss/component/_markdown-preview.scss
+++ b/ui/scss/component/_markdown-preview.scss
@@ -304,5 +304,5 @@
 }
 
 .editor-preview {
-  background-color: var(--color-input-bg);
+  background-color: rgba(var(--color-header-background-base), 1);
 }
