--- a/ui/scss/component/_nudge.scss
+++ b/ui/scss/component/_nudge.scss
@@ -48,4 +48,12 @@
   @media (min-width: $breakpoint-small) {
     width: 12.5rem;
   }
+
+  .nudge__text {
+    display: -webkit-box;
+    max-width: 200px;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
