Watch-progress indicator

--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -1115,6 +1115,14 @@
   }
 }
 
+.claim-preview__progress {
+  position: absolute;
+  bottom: 0;
+  height: 4px;
+  width: 100%;
+  background-color: var(--color-primary);
+}
+
 .claim-preview__claim-property-overlay {
   position: absolute;
   bottom: var(--spacing-xxs);
