--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -98,6 +98,10 @@
     margin-left: var(--spacing-s);
   }
 
+  .card__actions--inline:first-child {
+    margin-left: unset;
+  }
+
   @media (max-width: $breakpoint-small) {
     display: none;
   }
