--- a/ui/scss/init/_base-theme.scss
+++ b/ui/scss/init/_base-theme.scss
@@ -42,7 +42,8 @@
   --color-background: #fafafa;
   --color-background--splash: #212529;
   --color-border: #ededed;
-  --color-background-overlay: #21252980;
+  // --color-background-overlay: #21252980;
+  --color-background-overlay: rgba(18, 18, 18, 0.9);
   --color-card-background: #ffffff;
   --color-card-background-highlighted: #f1f7fe;
 
