--- a/ui/scss/themes/light.scss
+++ b/ui/scss/themes/light.scss
@@ -27,7 +27,7 @@
   --color-border: rgba(0, 0, 0, 0.2);
   --color-background-base: 231, 231, 231;
   --color-background: rgba(var(--color-background-base), 1);
-  --color-background-overlay: #21252980;
+  --color-background-overlay: rgba(18, 18, 18, 0.9);
   --color-card-background: var(--color-header-background);
   --color-card-background-highlighted: #fff5f5;
 
