--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -1120,6 +1120,7 @@
   bottom: 0;
   height: 4px;
   width: 100%;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
   background-color: var(--color-primary);
 }
 
