Better non-clickable implementation
## Issue
- Adding `content__non-clickable` everywhere probably isn't the right way when we move forward to separating `all.scss`.
- Not intuitive -- easier to use if it's an attribute to `ClaimPreview`.

## Change
- Consolidate to a re-usable `non-clickable` class.
- Made Wallet Send search preview non-clickable as a temporary band aid until the channel-finder is consolidated.
- `listBlocked`: something is overriding the pointer, so non-clickable isn't working. Removed for now -- doesn't really matter.

--- a/ui/scss/all.scss
+++ b/ui/scss/all.scss
@@ -8,6 +8,7 @@
 @import 'init/base-theme';
 @import 'themes/light.scss';
 @import 'themes/dark.scss';
+@import 'common/non-clickable';
 @import 'component/ads';
 @import 'component/animation';
 @import 'component/badge';
